# maven-autotools

./: .checkstyle  .classpath  .gitignore  README  pom.xml  profiles.xml
archetype/: catalog.xml  pom.xml
archetype/executable/: pom.xml
archetype/executable/src/main/resources/archetype-resources/: pom.xml
archetype/shared/: pom.xml
archetype/shared/src/main/resources/archetype-resources/: pom.xml
archetype/shared/src/main/resources/archetype-resources/src/main/autotools/: Makefile.am  configure.ac
it/: pom.xml
it/src/it/: verify-utils.bsh
it/src/it/autoconf/: pom.xml
it/src/it/autoconf/src/main/autotools/: config.h.in
it/src/it/automake/: pom.xml
it/src/it/automake-jni/: pom.xml
it/src/it/automake-jni/src/main/autotools/: Makefile.am
it/src/it/automake-subdir/: pom.xml
it/src/it/automake-subdir/src/main/autotools/: Makefile.am
it/src/it/automake-subdir/src/main/native/subdir/: hello.h
it/src/it/automake/src/main/autotools/: configure.ac
it/src/it/autoscan/: pom.xml
it/src/it/autoscan/src/main/native/: hello.c
it/src/it/configure/: pom.xml
it/src/it/configure/src/main/autotools/: configure
it/src/it/libraries/: pom.xml
it/src/it/libraries/bar/: pom.xml
it/src/it/libraries/bar/src/main/autotools/: Makefile.am
it/src/it/libraries/bar/src/main/native/: bar.c
it/src/it/libraries/libfoo/: pom.xml
it/src/it/libraries/libfoo/src/main/native/: foo.c
it/src/it/libraries/libshared-foo/: pom.xml
it/src/it/libraries/libshared-foo/src/main/autotools/: Makefile.am  configure.ac
it/src/it/libraries/libshared-foo/src/main/native/: shared-foo.c  shared-foo.h
it/src/it/libraries/libstatic-foo/: pom.xml
it/src/it/libraries/libstatic-foo/src/main/autotools/: Makefile.am  (+1 more)
it/src/it/macros/: pom.xml
it/src/it/macros/mymacros/: pom.xml
it/src/it/macros/usingmacros/: pom.xml
it/src/it/platform-mapped/: pom.xml  verify.bsh
maven-autotools-archetype/: catalog.xml  pom.xml
maven-autotools-archetype/executable/src/main/resources/archetype-resources/: pom.xml
maven-autotools-archetype/executable/src/main/resources/archetype-resources/src/main/autotools/: Makefile.am  configure.ac
maven-autotools-archetype/src/main/resources/archetype-resources/: pom.xml
maven-autotools-it/: pom.xml
maven-autotools-it/src/it/: verify-utils.bsh
maven-autotools-it/src/it/autoconf/: pom.xml
maven-autotools-it/src/it/autoconf/src/main/autotools/: Makefile.in  configure.in
maven-autotools-it/src/it/automake/: pom.xml
maven-autotools-it/src/it/automake-jni/: pom.xml
maven-autotools-it/src/it/automake-subdir/: pom.xml
maven-autotools-it/src/it/automake-subdir/src/main/autotools/: Makefile.am  configure.ac
maven-autotools-it/src/it/automake-subdir/src/main/native/: main.c
maven-autotools-it/src/it/automake/src/main/autotools/: Makefile.am
maven-autotools-it/src/it/autoscan/: pom.xml  verify.bsh
maven-autotools-it/src/it/configure/: pom.xml
maven-autotools-it/src/it/configure/src/main/autotools/: Makefile.in
maven-autotools-it/src/it/libraries/: pom.xml  verify.bsh
maven-autotools-it/src/it/libraries/bar/: pom.xml
maven-autotools-it/src/it/libraries/bar/src/main/autotools/: Makefile.am  acinclude.m4  configure.ac
maven-autotools-it/src/it/libraries/libfoo/: pom.xml
maven-autotools-it/src/it/macros/: verify.bsh
maven-autotools-it/src/it/macros/usingmacros/: pom.xml
maven-autotools-plugin/: pom.xml
maven-autotools-plugin/src/site/: site.xml
maven-autotools-plugin/src/test/resources/test-harness/autoconf/: pom.xml
maven-autotools-plugin/src/test/resources/test-harness/automake/: pom.xml
maven-autotools-plugin/src/test/resources/test-harness/autoscan/: pom.xml
maven-autotools-plugin/src/test/resources/test-harness/configure/: pom.xml
plugin/: pom.xml
plugin/src/site/: site.xml
plugin/src/site/markdown/: index.md
plugin/src/test/projects/macros/usingmacros/: pom.xml
plugin/src/test/resources/test-harness/autoconf/: pom.xml
plugin/src/test/resources/test-harness/automake/: pom.xml
plugin/src/test/resources/test-harness/autoscan/: pom.xml
plugin/src/test/resources/test-harness/configure/: pom.xml
plugin/src/test/resources/test-harness/postinstall/: pom.xml
src/checkstyle/: checkstyle.xml
src/eclipse/: preferences.epf
(+86 files in other folders)
